--- a/crawler/package.json
+++ b/crawler/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "pg": "^8.16.3"
+    "dotenv": "^17.2.3",
+    "pg": "^8.16.3",
+    "winston": "^3.18.3"
   },
   "type": "module"
 }
