--- a/crawler/package.json
+++ b/crawler/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "dotenv": "^17.2.3",
     "pg": "^8.16.3",
+    "stac-js": "^0.1.9",
     "winston": "^3.18.3"
   },
   "type": "module"
